# read-pdf-equatorial-enel

./: -layoyt  package-lock.json  pyproject.toml  requirements.txt  serverless.yml  test.py
src/: functions.py  read_txt.py  save_data.py  utils.py
src/equatorial/: identifies_the_model.py  model01.py  model02.py  read_lines_and_processed.py
